--- a/Client/package.json
+++ b/Client/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "^19.2.6",
     "@angular/platform-browser-dynamic": "^19.2.6",
     "@angular/router": "^19.2.6",
+    "@apollo/client": "^3.13.7",
+    "apollo-angular": "^10.0.3",
     "bootstrap": "^5.3.5",
+    "graphql": "^16.10.0",
+    "graphql-tag": "^2.12.6",
     "ngx-markdown": "^19.1.1",
     "prismjs": "^1.30.0",
     "rxjs": "~7.8.2",
@@ -26,9 +30,10 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.7",
+    "@angular-devkit/build-angular": "^19.2.0",
     "@angular/cli": "^19.2.7",
     "@angular/compiler-cli": "^19.2.6",
+    "@types/graphql": "^14.2.3",
     "@types/jasmine": "~5.1.7",
     "@types/prismjs": "^1.26.5",
     "jasmine-core": "~5.6.0",
